[package]
name = "eminput"
version = "0.1.0"
authors = ["Vaelint <freylint@tuta.io>"]
edition = "2018"


[dependencies]
bevy = "0.2.1"
serde = { version = "1.0.117", optional = true }

[features]
default = ["1DInput", "2DInput"]

# Input Axis
1DInput = []
2DInput = []

Multiplayer = ["InputSerialization"]
InputSerialization = ["serde"]